--- a/assets/index.html
+++ b/assets/index.html
@@ -23,8 +23,8 @@
                     <a href="#" class="brand-logo">Pet-Friender</a>
                     <ul class="right hide-on-med-and-down"  id="navList">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="Browser.html">Browser</a></li>
-                        <li><a href="Profile.html">Profile</a></li>
+                        <li><a href="Browser.html">Browse</a></li>
+                        <li><a href="Profile.html">Create Profile</a></li>
                         <li><a href="Contact.html">Contact</a></li>
                     </ul>
             </div>
@@ -33,7 +33,7 @@
 
     </div>
 
-    <!-- Landing Screen -->
+    <!-- Landing Screen
 
     <div class="section" id="landing">
         <h2 style="color:white;" id="mainText" class="center">Home</h2>
@@ -43,7 +43,7 @@
         </h1>
         <h5 style="color:white;" id="mainText" class="center">browser</h5>
 
-    </div>
+    </div> -->
 
 
     <!-- <div class="fixed-action-btn vertical">
