--- a/assets/contact.html
+++ b/assets/contact.html
@@ -22,9 +22,11 @@
           <a href="#" class="brand-logo">Priscila Tiezzi</a>
           <ul class="right hide-on-med-and-down" id="navList">
             <li><a href="index.html">Home</a></li>
-            <li><a href="Aboutme.html">About Me</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="profile.html"> Create Profile</a></li>
+            <li><a href="browser.html">Browse</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="Pet-friender.html">Our Company</a></li>
+            
           </ul>
       </div>
   </div>
@@ -41,7 +43,7 @@
             <ul>
               <li>
                 <label for="name"><b>Name</b></label>
-                <input style="color:white;" type="text" id="name" name="name" placeholder="Priscila Tiezzi"
+                <input style="color:white;" type="text" id="name" name="name" placeholder="Pet-Friender"
                   required="required">
               </li>
               <li>
