--- a/assets/index.html
+++ b/assets/index.html
@@ -26,6 +26,7 @@
                         <li><a href="Browser.html">Browse</a></li>
                         <li><a href="Profile.html">Create Profile</a></li>
                         <li><a href="Contact.html">Contact</a></li>
+                        <li><a href="Pet-friender.html">Our Company</a></li>
                     </ul>
             </div>
     </div>
