--- a/assets/contact.html
+++ b/assets/contact.html
@@ -16,16 +16,16 @@
 
   <div class="navbar-fixed">
 
-    <nav class="black">
-      <div class="container">
-        <div="nav-wrapper">
-          <a href="#" class="brand-logo">Priscila Tiezzi</a>
-          <ul class="right hide-on-med-and-down" id="navList">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="profile.html"> Create Profile</a></li>
-            <li><a href="browser.html">Browse</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="Pet-friender.html">Our Company</a></li>
+      <nav class="#01579b light-blue darken-4">
+          <div class="container">
+            <div="nav-wrapper">
+              <a href="#" class="brand-logo">Priscila Tiezzi</a>
+              <ul class="right hide-on-med-and-down" id="navList">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Browser.html">Browse</a></li>
+                    <li><a href="Profile.html">Create Profile</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                    <li><a href="log-in.html">Log-In</a></li>
             
           </ul>
       </div>
@@ -34,7 +34,7 @@
 
   </div>
 
-  <div class="section" style="background-color: #141414;" id="work">
+  <div class="section" style="background-color:#0d47a1 blue darken-4;" id="work">
     <div class="container">
       <h3 style="color:white;" class="header text_b center">Contact Us </h3>
       <div class="row2">
@@ -43,17 +43,17 @@
             <ul>
               <li>
                 <label for="name"><b>Name</b></label>
-                <input style="color:white;" type="text" id="name" name="name" placeholder="Pet-Friender"
+                <input style="color:#0d47a1 blue darken-4;" type="text" id="name" name="name" placeholder="Pet-Friender"
                   required="required">
               </li>
               <li>
                 <label for="email">Email</label>
-                <input style="color:white;" type="email" id="email" name="email" placeholder="example@gmail.com"
+                <input style="color:#0d47a1 blue darken-4;" type="email" id="email" name="email" placeholder="example@gmail.com"
                   required="required">
               </li>
               <li>
                 <label for="message">Message</label>
-                <textarea style="color:white;" id="message" name="message" required="required"></textarea>
+                <textarea style="color:#0d47a1 blue darken-4;" id="message" name="message" required="required"></textarea>
               </li>
             </ul>
             <input type="submit">
