--- a/assets/browser.html
+++ b/assets/browser.html
@@ -16,16 +16,19 @@
 
     <div class="navbar-fixed">
 
-        <nav class="black">
-            <div class="container">
-                <div="nav-wrapper">
-                    <a href="#" class="brand-logo">Pet-Friender</a>
-                    <ul class="right hide-on-med-and-down" id="navList">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="browser.html">Browser</a></li>
-                        <li><a href="profile">Profiles</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="Pet-friender.html">Our Company</a></li>
+            <div class="navbar-fixed">
+
+                    <nav class="#01579b light-blue darken-4">
+                      <div class="container">
+                        <div="nav-wrapper">
+                          <a href="#" class="brand-logo">Priscila Tiezzi</a>
+                          <ul class="right hide-on-med-and-down" id="navList">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="Browser.html">Browse</a></li>
+                                <li><a href="Profile.html">Create Profile</a></li>
+                                <li><a href="Contact.html">Contact</a></li>
+                                <li><a href="log-in.html">Log iny</a></li>
+
                     </ul>
             </div>
     </div>
@@ -35,81 +38,12 @@
 
 
 
-
-    <!-- <div class="section" id="work2">
-        <div class="container">
-            <h3 style="color:white;" class="header text_b center">My Projects </h3>
-            <br></br>
-            <div class="row ">
-                <div class="col s12 m12 l4">
-                    <div class="card  black">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/grilling.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator purple-text text-lighten-5">Project-1<i
-                                    class="mdi-navigation-more-vert right"></i></span>
-                            <p><a class="purple-text text-lighten-5"
-                                    href="file://C:/Users/13472/Desktop/Homework/Grillem/index.html">Project
-                                    link</a></p>
-                        </div>
-                        <div class="card-reveal  black">
-                            <span class="card-title purple-text text-lighten-5">Grillem <i
-                                    class="mdi-navigation-close right"></i></span>
-                            <h6 style="color:white;" class="center"> Here is some more information about this project
-                                that is only revealed once clicked on.</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card  black">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/dog.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator purple-text text-lighten-5">Trivia<i
-                                    class="mdi-navigation-more-vert right"></i></span>
-                            <p><a class="purple-text text-lighten-5"
-                                    href="file://C:/Users/13472/Desktop/Homework/pro/index.html">Project link</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal  black">
-                            <span class="card-title purple-text text-lighten-5">Food-Trivia <i
-                                    class="mdi-navigation-close right"></i></span>
-                            <h6 style="color:white;" class="center"> Here is some more information about this project
-                                that is only revealed once clicked on.</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card  black">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/business cards.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator purple-text text-lighten-5">E-card<i
-                                    class="mdi-navigation-more-vert right"></i></span>
-                            <p><a class="purple-text text-lighten-5" href="#">Projet-3</a></p>
-                        </div>
-                        <div class="card-reveal  black">
-                            <span class="card-title purple-text text-lighten-5">E-card <i
-                                    class="mdi-navigation-close right"></i></span>
-                            <h6 style="color:white;" class="center"> Here is some more information about this project
-                                that is only revealed once clicked on.</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- skills set -->
-
+<!-- 
     <div class="section" id="skillsets">
         <div class="container">
             <div class="row">
                 <h3 class="center white-text">
-                    My Skills
+                   Find Here your New Friend for you Best Friend
                 </h3>
                 <br></br>
             </div>
@@ -117,7 +51,7 @@
         <div class="row center">
             <div class="col s12 m12 l3">
                 <img class="responsive-img"
-                    src="http://icons.iconarchive.com/icons/graphics-vibe/developer/64/html-icon.png">
+                    src=>
             </div>
             <div class="col s12 m12 l3">
                 <img class="responsive-img"
@@ -134,24 +68,12 @@
         </div>
     </div>
     </div>
-    <div class="fixed-action-btn vertical">
-        <a class="btn-floating btn-large  blue-grey darken-4">
-            <i class="fa fa-globe"></i>
-        </a>
-        <ul>
+   -->
 
-            <li><a target="_blank" href="https://github.com/pritiezzi" class="btn-floating cyan lighten-1"><i
-                        class="fa fa-github"></i></a></li>
-            <li><a target="_blank"
-                    href="https://www.linkedin.com/in/priscila-tiezzi"
-                    class=" btn-floating blue"><i class="fa fa-linkedin"></i></a></li>
-        </ul>
-    </div>
- -->
 
     <!-- FOOTER -->
 
-    <footer class="section page-footer black">
+    <footer class="section apage-footer #01579b light-blue darken-4">
         <div class="container center-align">
             &#169;Pet-Friender
         </div>
