--- a/assets/index.html
+++ b/assets/index.html
@@ -17,16 +17,16 @@
 
     <div class="navbar-fixed">
 
-        <nav class="black">
+        <nav class="#00695c teal darken-3">
             <div class="container">
                 <div="nav-wrapper">
-                    <a href="#" class="brand-logo">Pet-Friender</a>
-                    <ul class="right hide-on-med-and-down"  id="navList">
+                    <a href="#" class="brand-logo">Priscila Tiezzi</a>
+                    <ul class="right hide-on-med-and-down" id="navList">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Browser.html">Browse</a></li>
                         <li><a href="Profile.html">Create Profile</a></li>
                         <li><a href="Contact.html">Contact</a></li>
-                        <li><a href="Pet-friender.html">Our Company</a></li>
+                        <li><a href="log-in.html">Log in</a></li>
                     </ul>
             </div>
     </div>
@@ -34,43 +34,27 @@
 
     </div>
 
-    <!-- Landing Screen
+    <!-- Landing Screen -->
 
-    <div class="section" id="landing">
-        <h2 style="color:white;" id="mainText" class="center">Home</h2>
-        <h1 style="color:white;" class="center">
+    <div class="section" id="Landing">
+        <h4 style="color:seagreen" id="paragraph" class="center"><b>Welcome To Pet-friender</b></h4>
+        <h5 style="color:seagreen " id="paragraph" class="center">
+            <p><i>Pet-Friender is an application design only for your pets!</i></p>
+            <p><i> The idea behind Pet-Friender is to have you Pet Best Friend connecting</i></p>
+            <p><i> with other Pets to build a new and long and beautiful friendship!</i></p>
+            <br><br>
 
-            <b>Pet-Friender</b>
-        </h1>
-        <h5 style="color:white;" id="mainText" class="center">browser</h5>
-
-    </div> -->
-
-
-    <!-- <div class="fixed-action-btn vertical">
-        <a class="btn-floating btn-large  blue-grey darken-4">
-            <i class="fa fa-globe"></i>
-        </a>
-        <ul>
-
-            <li><a target="_blank" href="https://github.com/pritiezzi" class="btn-floating cyan lighten-1"><i
-                        class="fa fa-github"></i></a></li>
-            <li><a target="_blank"
-                    href="https://www.linkedin.com/in/priscila-tiezzi"
-                    class="btn-floating blue "><i class="fa fa-linkedin"></i></a></li>
-        </ul>
-    </div> -->
+            <b> Create a profile and start you pet search today!</b>
+        </h5>
+    </div>
 
     <!-- FOOTER -->
 
-    <footer class="section page-footer black">
+    <footer class="section page-footer #00695c teal darken-3">
         <div class="container center-align">
             &#169;Pet-Friender
         </div>
     </footer>
-
-
-
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
