--- a/assets/profile.html
+++ b/assets/profile.html
@@ -19,16 +19,20 @@
 
         <div class="navbar-fixed">
 
-            <nav class="black">
-                <div class="container">
-                    <div="nav-wrapper">
-                        <a href="#" class="brand-logo">Priscila Tiezzi</a>
-                        <ul class="right hide-on-med-and-down" id="navList">
-                            <li><a href="index.html">Home</a></li>
-                        <li><a href="Aboutme.html">About Me</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="Pet-friender.html">Our Company</a></li>
+                <div class="navbar-fixed">
+
+                        <nav class="#01579b light-blue darken-4">
+                                <div class="container">
+                                  <div="nav-wrapper">
+                                    <a href="#" class="brand-logo">Priscila Tiezzi</a>
+                                    <ul class="right hide-on-med-and-down" id="navList">
+                                          <li><a href="index.html">Home</a></li>
+                                          <li><a href="Browser.html">Browse</a></li>
+                                          <li><a href="Profile.html">Create Profile</a></li>
+                                          <li><a href="Contact.html">Contact</a></li>
+                                          <li><a href="log-in.html">Log-In</a></li>
+
+
                         </ul>
                 </div>
         </div>
@@ -39,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col s12">
-                        <h4 style="color:white;" class="center header"> "It always seems impossible until it's done"
+                        <h4 style="color:white;" class="center header"> Create your Pets profile
                         </h4>
                     </div>
                 </div>
@@ -59,40 +63,7 @@
                             <div class="card-content white-text">
                                 <div class="center-align">
 
-<!-- 
-                                    <p>My name is synonymous with results-driven creation and execution of Front end
-                                        Design.
-                                        My unique design-thinking and creative exploration encourage dynamic, thoughtful
-                                        webpage designs that appeal to users in both the introduction phase and overall
-                                        usability.
 
-                                        I am a Full Stack Web Developer who fell in love with Front End design and have
-                                        made
-                                        many
-                                        projects using varying frameworks.
-                                        <br></br>
-                                        <i>“If You Are Working On Something That You Really Care About, You Don’t Have
-                                            To Be Pushed. The Vision Pulls You.” – Steve Jobs </i>
-                                    </p>
-                                    </h6> -->
-
-                                <!-- </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="fixed-action-btn vertical">
-                        <a class="btn-floating btn-large  blue-grey darken-4">
-                            <i class="fa fa-globe"></i>
-                        </a>
-                        <ul>
-
-                            <li><a target="_blank" href="https://github.com/pritiezzi"
-                                    class="btn-floating cyan lighten-1"><i class="fa fa-github"></i></a></li>
-                            <li><a target="_blank"
-                                    href="https://www.linkedin.com/in/priscila-tiezzi"
-                                    class="btn-floating blue"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div> -->
 
 
 
